axum-macros/tests/debug_handler/fail/generics.stderr
error: `#[axum_macros::debug_handler]` doesn't support generic functions
 --> tests/debug_handler/fail/generics.rs:4:17
  |
4 | async fn handler<T>() {}
  |                 ^^^

error[E0282]: type annotations needed
 --> tests/debug_handler/fail/generics.rs:4:10
  |
4 | async fn handler<T>() {}
  | -----    ^^^^^^^ cannot infer type for type parameter `T` declared on the function `handler`
  | |
  | consider giving `future` a type
